Z-Index Fix

--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -873,6 +873,7 @@ header {
     position: absolute;
     top: 15px;
     right: 10px;
+    z-index: 1;
 }
 .list-advantage {
 	width: 100%;
